test/Execute/SyntaxErrorTest/class_missing_name.typh
class {
}

"""stderr
syntax error: $FILE:1:6
  expected class name
    1 |  class {
              ^
"""
